--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -9,9 +9,6 @@ html {
 
   /* make app like native app in mobile */
   -webkit-tap-highlight-color: transparent;
-  /*  for firefox */
-  scrollbar-color: var(--theme-color) transparent;
-  scrollbar-width: thin;
 
   font-family: var(--font-sans);
 }
